<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/close"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_food"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/image_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_placeholder"
        android:scaleType="center"
        android:layout_below="@id/title"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/food_image" />




    <EditText
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_below="@id/image_added"
        android:layout_marginBottom="8dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:layout_below="@id/food_name"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />


        <EditText
            android:id="@+id/prix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prix"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:layout_below="@id/description"
            android:layout_marginBottom="16dp"
            android:padding="8dp" />


        <Button
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:layout_below="@id/prix"
        android:layout_marginBottom="16dp" />

    </RelativeLayout>
</ScrollView>